# release_zip

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DEBUG.md  README.md  Version.md  opencode.json  pyproject.toml  zip-rar-tool.bat
.githooks/: pre-commit
.opencode/commands/: workflow-check.md
.opencode/hooks/: workflow_check.py
.opencode/plugins/: workflow-guard.js
.opencode/rules/: behavior.md
.playwright-mcp/: page-2026-05-04T12-34-06-092Z.yml  page-2026-05-04T12-34-21-204Z.yml
docs/: 2026-05-04-lesson-learned.md
docs/adr/: 0001-gui-customtkinter.md
docs/plans/: 2026-05-04-interactive-bat.md  2026-05-04-zip-rar-implementation.md  2026-05-04-zip-rar-tool-design.md  2026-05-05-fix-encoding-crash.md  2026-06-28-gui-customtkinter.md
docs/test-logs/: 2026-05-05-fix-encoding-crash.txt  2026-05-05-fix-output-concat.txt  2026-05-06-fix-if-defined.txt
gui/: __init__.py  app.py
gui/widgets/: browse_tab.py  compress_tab.py  extract_tab.py  log_panel.py
openspec/changes/archive/2026-05-04-fix-multi-compress/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-interactive-bat/: design.md  proposal.md  tasks.md
openspec/changes/fix-encoding-crash/: tasks.md
openspec/specs/interactive-cli/: spec.md
tests/: test_batch_compress.py  test_integration.py  test_progress_callback.py  test_rar_backend.py  test_sevenz_backend.py  test_zip_backend.py
tests/fixtures/: test.rar
zip_rar_tool/: __init__.py  batch_compress.py  cli.py  core.py  utils.py
zip_rar_tool/backends/: rar_backend.py  sevenz_backend.py  zip_backend.py
(+4 files in other folders)
